
Version 2.1.0
 * Nicolas Rougier
   - New & simpler interface
   - Support of the IDLE state for imap4 (no more polling)
   - Support of the FAM (File Alteration Monitor)
     (no more polling for file/folder protocols)
   - Better detection of mailbox format
   - Bugfix: IMAP4 idle state test to avoid checking twice
   - Bugfix: Popup was shown on exiting preferences
   - Put back credits back
   - Updated French translations
   - Fix a bug with IMAP4 idle feature (not recognizing the BYE command)
   - Added a TODO file to keep track of features/bugs to be implemented/fixed
   - Bugfix: Testing of "\"text\" \"plain\"" in imap4 parsing was wrong
             (some servers answer using upper cases letter)
   - Modified credits apperance in the preferences panel (and remove the
     about menu from gnome applet popup menu)
   - Bugfix: socket was closed twice when lock was lost in IDLE state
   - Bugfix: modify the configure script to have errors if popt or fam
             libraries not present
   - Sorted the contributors list
   - Feature: When adding a mailbox and if one is selected, the new mailbox is
	      copied from the selected one
   - Feature: If password is empty, gnubiff try to find by looking at
              other mailboxes and matching (address/username)
* Robert Sowada (adapted by Nicolas Rougier from v2.0.3 to v2.1.0)
   - Gnome version can determine itself if in standalone mode or panel mode
   - Removed "--gtk" option, added "--applet" option in debug mode instead
   - Added "--version" option to all versions of gnubiff
   - "--help" option handled by "poptPrintHelp" in all versions of gnubiff
   - Removed messages that are no longer necessary
   - Bugfix: Using <return> in password entry
   - Bugfix: return value of main
   - Output of "--help" restructured
   - Update of man page (command line options, version, date)
   - Bugfix: Failure of select command (IMAP)
   - Bugfix: Failure of opening connection (IMAP)