@@ -1,37 +1,67 @@
 gnubiff THANKS file
 
-gnubiff has originally been written by Nicolas Rougier.
-Many people have further contributed to gnubiff by reporting problems, 
-suggesting various improvements, or submitting actual code. Here is
-a list of these people. Help me keep it complete and exempt of errors.
 
-* Alexis S. L. Carvhalo              <alexis@cecm.usp.br>
-* Jean-Yves Lefort                  <jylefort@brutele.be>
-* Calum Mackay                  <calum.mackay@cdmnet.org>
-* Robert Sowada                         <sowadart@gmx.de>
-* Roland Stigge                        <stigge@antcom.de>
-* Erik Sittman              <erik.sittmann@onlinehome.de>
-* Dries Verachtert                    <dries@ulyssis.org>
-* Paul Kuliniewicz                  <kuliniew@purdue.edu>
-* Grzegorz Gotawski               <grzegol@pld-linux.org>
-* Adam Benjamin                   <aebenjam@opentext.com>
-* Theodore Tegos                   <tegos@cs.ualberta.ca>
-* Achim Settelmeier            <rpm-gnubiff@m1.sirlab.de>
-* Barry Skidmore           <skidmore@mail.worldvenue.org>
-* Christian Probst                 <probst@cs.unis-sb.de>
-* Josh Parsons                    <jp30@st-andrews.ac.uk>
-* Michael Moellney     <moellney@simtec.mb.uni-siegen.de>
-* Dennis Bjorklund                      <db@zigo.dhs.org>
-* Craig B. Agricola            <craig@chocolate.chip.net>
-* Bernhard Valenti             <bernhard.valenti@gmx.net>
-* Josh Berdine                    <berdine@dcs.qmw.ac.uk>
-* Michel Leunen                             <leu@rtbf.be>
-* Greg Fenton                       <gregfenton@home.com>
-* Cai Yu                         <yu.cai@rdc.ericsson.se>
-* Chris Snell                       <chris@bikeworld.com>
-* Reid Rivenburgh                         <reid@lanl.gov>
-* Neil Muller                        <neil@dip.sun.ac.za>
-* Sascha Lüdecke                       <sascha@meta-x.de>
-* Richard Torkar                    <ds98rito@thn.htu.se>
-* Pete Phillips                         <pete@smtl.co.uk>
-* Blaise Tarr                       <conitorus@yahoo.com>
+Authors:
+--------
+gnubiff has originally been written by Nicolas Rougier
+
+
+Developers:
+-----------
+Nicolas Rougier
+Robert Sowada
+
+
+Maintainers:
+------------
+Roland Stigge
+
+
+Translators:
+------------
+Elros Cyriatan
+Stefano Fabri
+Nicols Lichtmaler
+Michel Robitaille
+Nicolas Rougier
+Robert Sowada
+Roland Stigge
+
+
+Various contributors:
+---------------------
+Craig Agricola,
+Adam Benjamin,
+Josh Berdine,
+Philippe Berger,
+Dennis Bjorklund,
+Greg Fenton,
+Grzegorz Gotawski,
+Earl Killian,
+Marc-Jano Knopp,
+Paul Kuliniewicz,
+Jean-Yves Lefort,
+Michel Leunen,
+Jason Lowdermilk,
+Sascha Ludecke,
+Calum Mackay,
+Michael Moellney,
+Sophie Morel,
+Neil Muller,
+Josh Parsons,
+Pete Phillips,
+Christian Probst,
+Reid Rivenburgh,
+Hans-Ulrich Schaefer,
+Achim Settelmeier,
+Erik Sittman,
+Barry Skidmore,
+Chris Snell,
+Blaise Tarr,
+Theodore Tegos,
+Richard Torkar,
+Bernhard Valenti,
+Dries Verachtert,
+Suzan Wassman,
+Cai Yu
+
