@@ -18,9 +18,9 @@
 // 02111-1307, USA.
 // ========================================================================
 //
-// File          : $RCSfile$
-// Revision      : $Revision$
-// Revision date : $Date$
+// File          : $RCSfile: ui-properties.cc,v $
+// Revision      : $Revision: 1.2 $
+// Revision date : $Date: 2004/12/03 17:13:39 $
 // Author(s)     : Nicolas Rougier
 // Short         : 
 //
@@ -275,7 +275,7 @@ Properties::on_type_changed (GtkAction *action)
 		auth_view (true);
 		certificate_view (false);
 		mailbox_view (true);
-		delay_view (false);
+		delay_view (true);
 	}
 }
 
@@ -561,7 +561,7 @@ Properties::type_view (void)
 		gtk_widget_set_sensitive (get("browse_address"), false);
 		identity_view (true);
 		details_view (true);
-		delay_view (false);
+		delay_view (true);
 		mailbox_view (true);
 		auth_view (true);
 	}
