@@ -1526,9 +1526,9 @@
 			<widget class="GtkTable" id="developers_table">
 			  <property name="border_width">12</property>
 			  <property name="visible">True</property>
-			  <property name="n_rows">2</property>
+			  <property name="n_rows">3</property>
 			  <property name="n_columns">2</property>
-			  <property name="homogeneous">True</property>
+			  <property name="homogeneous">False</property>
 			  <property name="row_spacing">3</property>
 			  <property name="column_spacing">12</property>
 
@@ -1597,7 +1597,6 @@
 			      <property name="right_attach">1</property>
 			      <property name="top_attach">0</property>
 			      <property name="bottom_attach">1</property>
-			      <property name="x_options">fill</property>
 			      <property name="y_options"></property>
 			    </packing>
 			  </child>
@@ -1621,8 +1620,42 @@
 			      <property name="right_attach">2</property>
 			      <property name="top_attach">0</property>
 			      <property name="bottom_attach">1</property>
-			      <property name="x_options">fill</property>
 			      <property name="y_options"></property>
+			    </packing>
+			  </child>
+
+			  <child>
+			    <widget class="GtkVBox" id="vbox1">
+			      <property name="visible">True</property>
+			      <property name="homogeneous">False</property>
+			      <property name="spacing">0</property>
+
+			      <child>
+				<widget class="GtkLabel" id="label34">
+				  <property name="visible">True</property>
+				  <property name="label" translatable="yes">&lt;small&gt;Bugs should be reported to &lt;span foreground=&quot;blue&quot;&gt;gnubiff-bugs@lists.sourceforge.net&lt;/span&gt;&lt;/small&gt;</property>
+				  <property name="use_underline">False</property>
+				  <property name="use_markup">True</property>
+				  <property name="justify">GTK_JUSTIFY_LEFT</property>
+				  <property name="wrap">False</property>
+				  <property name="selectable">False</property>
+				  <property name="xalign">0</property>
+				  <property name="yalign">1</property>
+				  <property name="xpad">0</property>
+				  <property name="ypad">0</property>
+				</widget>
+				<packing>
+				  <property name="padding">0</property>
+				  <property name="expand">True</property>
+				  <property name="fill">True</property>
+				</packing>
+			      </child>
+			    </widget>
+			    <packing>
+			      <property name="left_attach">0</property>
+			      <property name="right_attach">2</property>
+			      <property name="top_attach">2</property>
+			      <property name="bottom_attach">3</property>
 			    </packing>
 			  </child>
 			</widget>
@@ -2156,7 +2189,7 @@ Here is a list of these people:&lt;/small&gt;</property>
 				  <property name="left_margin">6</property>
 				  <property name="right_margin">6</property>
 				  <property name="indent">0</property>
-				  <property name="text">Craig Agricola, Adam Benjamin, Josh Berdine, Philippe Berger, Dennis Bjorklund, Greg Fenton, Grzegorz Gotawski, Earl Killian, Marc-Jano Knopp, Paul Kuliniewicz, Jean-Yves Lefort, Michel Leunen, Jason Lowdermilk, Sascha Ludecke, Calum Mackay, Michael Moellney, Neil Muller, Josh Parsons, Pete Phillips, Christian Probst, Reid Rivenburgh, Hans-Ulrich Schaefer, Achim Settelmeier, Erik Sittman, Barry Skidmore, Chris Snell, Blaise Tarr, Theodore Tegos, Richard Torkar, Bernhard Valenti, Dries Verachtert, Suzan Wassman, Cai Yu</property>
+				  <property name="text">Craig Agricola, Adam Benjamin, Josh Berdine, Philippe Berger, Dennis Bjorklund, Greg Fenton, Grzegorz Gotawski, Earl Killian, Marc-Jano Knopp, Paul Kuliniewicz, Jean-Yves Lefort, Michel Leunen, Jason Lowdermilk, Sascha Ludecke, Calum Mackay, Michael Moellney, Sophie Morel, Neil Muller, Josh Parsons, Pete Phillips, Christian Probst, Reid Rivenburgh, Hans-Ulrich Schaefer, Achim Settelmeier, Erik Sittman, Barry Skidmore, Chris Snell, Blaise Tarr, Theodore Tegos, Richard Torkar, Bernhard Valenti, Dries Verachtert, Suzan Wassman, Cai Yu</property>
 				</widget>
 			      </child>
 			    </widget>
